# mail_extractor

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
