[package]
name = "mail_extractor"
version = "0.1.1"
authors = ["iamsaquib <saquib@distill.io>"]
edition = "2018"
description = """
    A Rust library to extract files from MIME type files and returns you a hashmap which will contain filename and it corresponding file content as bytes
"""
license = "GPL-3.0"
repository = "https://github.com/distill-io/mail_extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailparse = "0.10.1"
lol_html = "0.1.0"
lazy_static = "1.4.0"
base64 = "0.11.0"
regex = "1"